fix numerical stability of WSDDN loss; improve demo

--- a/demo/demo-07.ipynb
+++ b/demo/demo-07.ipynb
@@ -297,36 +297,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cannot open input file.\n",
-      "uUUWejExcLk.mp4\n",
-      "Cannot open input file.\n",
-      "9HF9a9P-lLw.mp4\n",
-      "Cannot open input file.\n",
-      "4vGaWRRs1cc.mp4\n",
-      "Cannot open input file.\n",
-      "bhWhuUhAbqk.mp4\n",
-      "Cannot open input file.\n",
-      "ufpqxRukWaI.mp4\n",
-      "Cannot open input file.\n",
-      "mGVHNXcwcKk.mp4\n",
-      "Cannot open input file.\n",
-      "JSvwWs7PIsw.mp4\n",
-      "Cannot open input file.\n",
-      "LYBKNaGad7o.mp4\n",
-      "Cannot open input file.\n",
-      "0xBxtyxw488.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "solo = True\n",
+    "file_list = [\n",
+    "    '9HF9a9P-lLw.mp4',\n",
+    "    'cF0316u8OG4.mp4',\n",
+    "    'IxGPyoml9C4.mp4',    \n",
+    "    'vOO_fDMyRiM.mp4',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solo = False\n",
     "side_by_side = True\n",
     "generate_video = True\n",
     "generate_gif = False\n",
@@ -372,8 +361,10 @@
     "        cap.release()\n",
     "        if generate_video and solo:\n",
     "            out_sol.release()\n",
-    "        if generate_video and sbs:\n",
+    "            out_sol = None\n",
+    "        if generate_video and side_by_side:\n",
     "            out_sbs.release()\n",
+    "            out_sbs = None\n",
     "        if generate_gif and solo:\n",
     "            gif_sol = [Image.fromarray(item[:, :, ::-1]) for item in gif_sol]\n",
     "            imageio.mimsave(\n",
