--- a/demo/demo-08.ipynb
+++ b/demo/demo-08.ipynb
@@ -242,24 +242,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cannot open input file.\n",
-      "uUUWejExcLk.mp4\n",
-      "Cannot open input file.\n",
-      "9HF9a9P-lLw.mp4\n",
-      "Cannot open input file.\n",
-      "4vGaWRRs1cc.mp4\n",
-      "Cannot open input file.\n",
-      "bhWhuUhAbqk.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "solo = True\n",
+    "solo = False\n",
     "side_by_side = True\n",
     "generate_video = True\n",
     "generate_gif = False\n",
@@ -305,8 +290,10 @@
     "        cap.release()\n",
     "        if generate_video and solo:\n",
     "            out_sol.release()\n",
-    "        if generate_video and sbs:\n",
+    "            out_sol = None\n",
+    "        if generate_video and side_by_side:\n",
     "            out_sbs.release()\n",
+    "            out_sbs = None\n",
     "        if generate_gif and solo:\n",
     "            gif_sol = [Image.fromarray(item[:, :, ::-1]) for item in gif_sol]\n",
     "            imageio.mimsave(\n",
